--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "l2iv-binius"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+rand = "0.8.5"
+
 [dev-dependencies]
 rand_chacha = "0.3.1"
-rand = "0.8.5"
